# fastapi-microservices

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  loggers.dev.json  loggers.json  pyproject.toml  requirements.txt
db/: Dockerfile  create-db-v3.sh  prepare_dev_db.sh  readme.md
db/auth/migrations/: 20210402070846_rev_1.sql
db/nms/migrations/: 20210429131036_rev_1.sql  20210504103153_rev_2.sql  20210504112215_rev_3.sql  20210505081651_rev_4.sql
nms/cfg/: main.py  version.py
nms/cfg/api/routes/: commands.py  equipments.py  telemetry.py
nms/common/: config.py  service.py
nms/common/api/: app.py  gzip_request.py
nms/common/api/dependencies/: command.py  database.py  equipment.py  telemetry.py
nms/common/api/errors/: __init__.py
nms/common/api/routes/: service.py
nms/common/db/: errors.py  events.py
nms/common/db/queries/: nms.py
nms/common/db/queries/nms/: commands.sql  equipments.sql  telemetry.sql
nms/common/db/repositories/: base.py
nms/common/db/repositories/cfg/: commands.py  equipments.py  telemetry.py  utils.py
nms/common/models/: commands.py  equipments.py  gis.py  pydantic_patch.py  response_pagination.py  rfspectrumtrace.py  service.py  telemetry.py
nms/ctrl/: main.py  version.py
nms/ctrl/api/routes/: equipments.py
nms/inbox/: main.py  version.py
nms/inbox/api/routes/: inbox.py
nms/inbox/models/: traces.py
rabbitmq/: Dockerfile
scripts/: create-docker-volumes.sh
